<resources>
    <string name="app_name">CustomImageMaps</string>
    <string name="users">Users</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_photo">Choose from your photos</string>
    <string name="not_completed_message">The action could not be completed due to non-granting of the appropriate rights to the application.</string>
    <string name="ok">Ok</string>
    <string name="rights_error">Failure to grant appropriate rights</string>
    <string name="epipedo_doryforos">Satellite layer is not available offline</string>
    <string name="epipedo_edafos">Terrain layer is not available offline</string>
    <string name="default_map_type">Default</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="friend_finder_map">Friend Finder Map</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_passw">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_text">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_und"><u>Sign Up</u></string>
    <string name="mail_via">Send mail via...</string>
    <string name="wrong_combination">Wrong email/password</string>
    <string name="sign_up_success">You have successfully signed up!</string>
    <string name="sign_up_failure">Sign up failed. Try again</string>
    <string name="user_alredy_exists">There is already a user with this email address</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="upload_failed">Image upload failed</string>
    <string name="delete_account_success">Account deleted successfully</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in_und"><u>Sign In</u></string>
    <string name="name">First Name</string>
    <string name="epwnymo">Last Name</string>
    <string name="confirm_passw">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="fields_required">Fill in the required fields</string>
    <string name="mail_not_valid">Please enter a valid email address</string>
    <string name="password_6_chars">Password must be at least 6 characters long</string>
    <string name="passwords_dont_match">Passwords do not match!</string>
    <string name="image_uploading">Image Upload</string>
    <string name="loading">Loading</string>
    <string name="choose_image_from">Choose Image from</string>
    <string name="directions_to">Directions to user\'s location</string>
    <string name="apostoli">Share user info</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">Edit profile</string>
    <string name="map">Map</string>
    <string name="visibility">visibility</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="update_login_status_failed">Could not update login status</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_visibility_alert">Do you want to change your status to invisible? You will not appear in the list of users, nor on the map</string>
    <string name="user_visibility">User visibility</string>
    <string name="apostoli_mail">Send email</string>
    <string name="more">More</string>
    <string name="prompt_name">Enter first name</string>
    <string name="prompt_surname">Enter last name</string>
    <string name="prompt_phone">Enter phone number</string>
    <string name="my_apostoli">Share my info</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Update</string>
    <string name="remove_photo">Remove photo</string>
    <string name="delete_account_alert">Do you want to permanently delete your account?</string>
    <string name="contact_with_user">User Contact</string>
    <string name="send_user_details">Share info via...</string>
    <string name="user_details_from_app">User Info from FriendFinder app</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="user_not_loggedIn">User is not logged in and not displayed on map</string>
    <string name="phone">Phone</string>
    <string name="deleting_account">DELETING ACCOUNT</string>
    <string name="user_already_signedIn">This user is already logged in to another device</string>
</resources>