<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/image_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:background="@drawable/custom_blue_bar">

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/login_talos"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add_friend"
                    />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:id="@+id/textView_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/friend_finder_map"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"/>



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_passw"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:background="@drawable/shape_sign_in_button"
            android:textSize="20sp"/>

        <TextView
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_text"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <LinearLayout
            android:gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/no_account"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/sign_up_link"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_und"
                android:textStyle="bold"
                android:textSize="15.5sp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>