<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/image_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:background="@drawable/custom_blue_bar">

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:id="@+id/textView_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/friend_finder_map"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_constraintL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/remove_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/remove_photo"
                android:textColor="@android:color/black" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/avatardefault_92824"
                app:civ_border_width="3.5dp"
                app:civ_border_color="@color/image_border"
            />

            <androidx.cardview.widget.CardView
                android:layout_marginStart="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/edittext"
                android:id="@+id/roundCardView"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/profilePicAdd"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_add_a_photo_24" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePic"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:id="@+id/upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/upload_profile_image"
                android:textColor="@color/colorPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">


            <LinearLayout
                android:weightSum="1"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_weight="0.5"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/fName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapSentences"
                    android:backgroundTint="@color/colorPrimary"/>

                <EditText
                    android:layout_weight="0.5"
                    android:id="@+id/LName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/epwnymo"
                    android:inputType="textCapSentences"
                    android:backgroundTint="@color/colorPrimary"/>

            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"/>



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_passw"
                android:inputType="textPassword"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_passw"
                android:inputType="textPassword"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"/>

            <EditText
                android:id="@+id/phonnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:background="@drawable/shape_sign_in_button"
            android:textSize="20sp"/>


        <LinearLayout
            android:gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/already_account"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/sign_in_link"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_und"
                android:textStyle="bold"
                android:textSize="15.5sp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>



    </LinearLayout>
</ScrollView>