<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.MapActivity">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_constraintL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            >

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/remove_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/remove_photo"
                android:textColor="@android:color/black" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/avatardefault_92824"
                app:civ_border_width="3.5dp"
                app:civ_border_color="@color/image_border"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginStart="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/edittext"
                android:id="@+id/roundCardView"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:id="@+id/profilePicAdd"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_add_a_photo_24" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="0.5"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginBottom="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="19sp"
                    android:textColor="@color/colorPrimary"
                    />

                <EditText
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_border"
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textCapSentences"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginBottom="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/epwnymo"
                    android:textSize="19sp"
                    android:textColor="@color/colorPrimary"
                    />

                <EditText
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_border"
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_surname"
                    android:inputType="textCapSentences"
                    />
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="19sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:backgroundTint="@color/colorPrimary"
            android:padding="12dp"
            android:background="@drawable/edit_text_border"
            android:id="@+id/phon_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:inputType="number"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="17dp"
            />



    </LinearLayout>
</ScrollView>